# scikit-traveltime

./: LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  build_package.sh  pypi_build_script  pyproject.toml  setup.py
example/: traveltime_example.ipynb  traveltime_example.py  traveltime_map.py  traveltime_source_receiver.py
scikit-traveltime/: __init__.py  traveltime.py
traveltime/: __init__.py  traveltime.py
